[gd_scene load_steps=7 format=3 uid="uid://v2kd6stvs6ao"]

[ext_resource type="Texture2D" uid="uid://bhtkvtaiiibys" path="res://assets/Screenshot1.png" id="1_24njt"]
[ext_resource type="Script" uid="uid://dhrhgx4i6t646" path="res://script/store.gd" id="1_tq3ax"]
[ext_resource type="PackedScene" uid="uid://i1af5rulk5n" path="res://scene/m_4a_1.tscn" id="2_mguni"]
[ext_resource type="PackedScene" uid="uid://ckpywoaogpw7" path="res://scene/revolver.tscn" id="3_myxlr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1g8jm"]
size = Vector2(170, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mguni"]
size = Vector2(249, 136)

[node name="store" type="StaticBody2D" groups=["stiore"]]
script = ExtResource("1_tq3ax")
guns_for_sale = Array[PackedScene]([ExtResource("2_mguni"), ExtResource("3_myxlr")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -39.5)
shape = SubResource("RectangleShape2D_1g8jm")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, 0)
scale = Vector2(0.08958334, 0.07814302)
texture = ExtResource("1_24njt")

[node name="buying_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="buying_area"]
position = Vector2(0.5, 12)
shape = SubResource("RectangleShape2D_mguni")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ShopUI" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = -25.0
offset_top = 10.0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="CanvasLayer/ShopUI"]
layout_mode = 0
offset_left = 878.0
offset_top = 132.0
offset_right = 1172.0
offset_bottom = 484.0

[node name="Label" type="Label" parent="CanvasLayer/ShopUI/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="ItemContainer" type="VBoxContainer" parent="CanvasLayer/ShopUI/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerWeaponsContainer" type="VBoxContainer" parent="CanvasLayer/ShopUI/Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 185.0
offset_right = 42.0
offset_bottom = 225.0

[node name="CloseButton" type="Button" parent="CanvasLayer/ShopUI/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 242.0
offset_top = 12.0
offset_right = 284.0
offset_bottom = 35.0
text = "X"
